--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         <activity
             android:name=".TopicOverviewActivity"
             android:label="@string/title_activity_topic_overview"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".QuizQuestionActivity" />
+        <activity android:name=".QuizAnswerActivity"></activity>
     </application>
 
 </manifest>
