WIP #stable converting activities to fragments, got master detail basics down

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:label="@string/title_activity_topic_overview"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".QuizQuestionActivity" />
-        <activity android:name=".QuizAnswerActivity"></activity>
+        <activity android:name=".QuizAnswerActivity" />
+        <activity android:name=".QuizActivity"></activity>
     </application>
 
 </manifest>
