--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TopicListActivity">
+        <activity android:name=".Activities.TopicListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +21,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".QuizQuestionActivity" />
         <activity android:name=".QuizAnswerActivity" />
-        <activity android:name=".QuizActivity"></activity>
+        <activity android:name=".Activities.QuizActivity"></activity>
     </application>
 
 </manifest>
