--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     package="edu.washington.ksf7.quizdroid">
 
     <application
+        android:name=".QuizApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".QuizApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activities.TopicListActivity">
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.QuizActivity"></activity>
+        <activity android:name=".Activities.QuizActivity" />
+        <activity android:name=".Activities.PreferencesActivity"></activity>
     </application>
 
 </manifest>
